2011-05-21  James Youngman  <jay@gnu.org>

	Print clearer test labels.
	* tests/common/test-common (docommand): Print the test directory
	and the test script as part of the label of each test, for
	additional clarity and because many of them are actually not
	unique.
	* tests/get/sf111140.sh (label_prefix): Print qualified labels (as
	for docommand).

	Source the command-names script only once per test script.
	* tests/common/real-thing: Instead of sourcing the command-names
	script unconditionally, just complain if it was not already
	sourced.
	* tests/common/command-names: Error out if the command-names
	script is sourced twice.
	* tests/common/config-data: Don't source the command-names script
	more than once.
	* tests/common/need-prt: Likewise.

	* tests/Makefile.am (test-*): Indicate the full path of each test
	script.

	Set TZ=GMT in the y2k tests.
	* tests/year-2000/ext.sh: Set $TZ to GMT in order to make it
	possible for implementations which convert SCCS file dates to
	time_t values (but which otherwise have no bugs) to pass the
	tests.
	* tests/year-2000/prs-y2k.sh: Likewise.

	Remove spurious space in definition of admin.
	* tests/common/command-names (admin): remove spurious space.

	Move on from release 1.3.1.
	* configure.ac: Update version number to 1.3.2-git, to indicate
	that compiled versions of this code are no longer identical to the
	1.3.1 release.
	* NEWS: Likewise.

2011-05-10  James Youngman  <jay@gnu.org>

	Release version 1.3.1.
	* NEWS: Update version number to 1.3.1.
	* configure.ac: Likewise.

	Check we distributed all the tests.  Remove redundant Makefile.am files.
	* auxfiles/check-testfiles.sh: New script (copied from GNU
	findutils e66802375963941b3b54a0e038d18eccde449e14 with some
	adaptations for CSSC) for checking that we installed all the test
	scripts in "make dist".
	* tests/Makefile.am (dist-hook): Invoke the
	auxfiles/check-testfiles.sh script.
	* tests/common/Makefile.am: remove unreferenced file;